--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>KK FUNDA Releases Nexus Repository</name>
-	      <url>http://http://65.0.96.158:8081/repository/jio-release/</url>
+	      <url>http://65.0.96.158:8081/repository/jio-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>KK FUNDA Snapshot Nexus Repository </name>
-	      <url>http://http://65.0.96.158:8081/repository/jio-snapshot/</url>
+	      <url>http://65.0.96.158:8081/repository/jio-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
